--- a/Romanian/main/MiuiScanner.apk/res/values-ro/strings.xml
+++ b/Romanian/main/MiuiScanner.apk/res/values-ro/strings.xml
@@ -273,23 +273,23 @@
     <string name="language_entry_russian">Rusă</string>
     <string name="language_entry_spanish">Spaniolă</string>
     <string name="language_entry_swedish">Suedeză</string>
-<!--<string name="language_value_chinese_cn">chinese_cn</string>-->
-<!--<string name="language_value_chinese_tw">chinese_tw</string>-->
-<!--<string name="language_value_danish">danish</string>-->
-<!--<string name="language_value_dutch">dutch</string>-->
-<!--<string name="language_value_english">english</string>-->
-<!--<string name="language_value_finnish">finnish</string>-->
-<!--<string name="language_value_french">french</string>-->
-<!--<string name="language_value_german">german</string>-->
-<!--<string name="language_value_hungarian">hungarian</string>-->
-<!--<string name="language_value_italian">italian</string>-->
-<!--<string name="language_value_japanese">japanese</string>-->
-<!--<string name="language_value_korean">korean</string>-->
-<!--<string name="language_value_norwegian">norwegian</string>-->
-<!--<string name="language_value_portuguese">portuguese</string>-->
-<!--<string name="language_value_russian">russian</string>-->
-<!--<string name="language_value_spanish">spanish</string>-->
-<!--<string name="language_value_swedish">swedish</string>-->
+  <string name="language_value_chinese_cn">chinese_cn</string>
+  <string name="language_value_chinese_tw">chinese_tw</string>
+  <string name="language_value_danish">danish</string>
+  <string name="language_value_dutch">dutch</string>
+  <string name="language_value_english">english</string>
+  <string name="language_value_finnish">finnish</string>
+  <string name="language_value_french">french</string>
+  <string name="language_value_german">german</string>
+  <string name="language_value_hungarian">hungarian</string>
+  <string name="language_value_italian">italian</string>
+  <string name="language_value_japanese">japanese</string>
+  <string name="language_value_korean">korean</string>
+  <string name="language_value_norwegian">norwegian</string>
+  <string name="language_value_portuguese">portuguese</string>
+  <string name="language_value_russian">russian</string>
+  <string name="language_value_spanish">spanish</string>
+  <string name="language_value_swedish">swedish</string>
     <string name="module_title_code">Cod QR</string>
     <string name="module_title_document">Document</string>
     <string name="module_title_namecard">Carte de vizită</string>
@@ -313,7 +313,7 @@
     <string name="phone">Telefon:</string>
     <string name="picker_lable">Fotografie</string>
     <string name="place_barcode_into_rectangle">Plasați codul în interiorul cadrului</string>
-<!--<string name="pref_camera_focusmode_default">continuous-picture</string>-->
+  <string name="pref_camera_focusmode_default">continuous-picture</string>
   <string name="pref_camera_jpeg_quality_fine">fine</string>
   <string name="pref_camera_jpeg_quality_normal">normal</string>
   <string name="pref_camera_jpeg_quality_superfine">superfine</string>
